[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Detail/DetailInfo.gd" type="Script" id=1]
[ext_resource path="res://Assets/Package/GUI Items/GUI_Items_0078_Package-----------------.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/box-300x300.png" type="Texture" id=3]
[ext_resource path="res://Assets/PixelArtGUI/Main menu/Button BG shadow.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Arial_Rounded_MT.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Sprites/box-800x14.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/circle-72x61.png" type="Texture" id=8]
[ext_resource path="res://Assets/bis/Damri.jpg" type="Texture" id=9]
[ext_resource path="res://Assets/PixelArtGUI/Loading Screen/Background.png" type="Texture" id=10]
[ext_resource path="res://Assets/PixelArtGUI/Bonus/Bonus 03.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=4]
radius = 31.9121

[sub_resource type="DynamicFont" id=5]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=6]
radius = 30.192

[sub_resource type="DynamicFont" id=7]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 375.91, 10 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 28
font_data = ExtResource( 6 )

[node name="DetailInfo" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 742.227, 356.163 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="Button BG shadow" type="Sprite" parent="."]
position = Vector2( 643.412, 400.056 )
scale = Vector2( 5.10258, 1.37044 )
texture = ExtResource( 5 )

[node name="Deskripsi" type="Sprite" parent="."]
position = Vector2( 397.173, 176.326 )
scale = Vector2( 6, 6 )
texture = ExtResource( 11 )

[node name="DeskripsiText" type="RichTextLabel" parent="Deskripsi"]
anchor_left = -0.475556
anchor_top = -0.472727
anchor_right = 5.20482
anchor_bottom = 4.6
margin_left = 0.471176
rect_scale = Vector2( 0.167, 0.167 )
custom_fonts/normal_font = SubResource( 1 )
text = "On Progress"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FasilitasText" type="Label" parent="."]
margin_left = 148.0
margin_top = 374.0
margin_right = 1130.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 2 )
text = "Cek Fasilitas"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box-300x300" type="Sprite" parent="."]
position = Vector2( 983, 175 )
texture = ExtResource( 3 )

[node name="HargaText" type="Label" parent="box-300x300"]
margin_left = -150.0
margin_top = 151.0
margin_right = 150.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 3 )
text = "Harga Bis"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="Sprite" parent="box-300x300"]
texture = ExtResource( 9 )

[node name="Via" type="Sprite" parent="."]
position = Vector2( 240, 450 )
texture = ExtResource( 7 )
centered = false

[node name="Asal" type="Sprite" parent="Via"]
position = Vector2( 1, 6 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="AreaAsal" type="Area2D" parent="Via/Asal"]

[node name="AsalCollider" type="CollisionShape2D" parent="Via/Asal/AreaAsal"]
shape = SubResource( 4 )

[node name="AsalText" type="Label" parent="Via/Asal"]
margin_left = -60.0
margin_top = 51.6666
margin_right = 64.0
margin_bottom = 85.6666
custom_fonts/font = SubResource( 5 )
text = "Asal Kota"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaTujuan" type="Sprite" parent="Via"]
position = Vector2( 791, 8 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="Via/AreaTujuan"]

[node name="TujuanCollider" type="CollisionShape2D" parent="Via/AreaTujuan/Area2D"]
shape = SubResource( 6 )

[node name="TujuanText" type="Label" parent="Via/AreaTujuan"]
margin_left = -74.9999
margin_top = 40.0
margin_right = 80.0001
margin_bottom = 74.0
custom_fonts/font = SubResource( 7 )
text = "Kota Tujuan"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaVia" type="Area2D" parent="Via"]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Via/AreaVia"]
position = Vector2( 395.069, 7.03235 )
shape = SubResource( 8 )

[node name="ViaText" type="Label" parent="Via"]
margin_left = 201.0
margin_top = 30.0
margin_right = 601.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 9 )
text = "Via"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailInfo" type="Button" parent="."]
visible = false
margin_left = 479.0
margin_top = 525.0
margin_right = 802.0
margin_bottom = 565.0
custom_fonts/font = SubResource( 10 )
text = "Informasi Selengkapnya"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FasilitasButton" type="TextureButton" parent="."]
margin_left = 150.0
margin_top = 377.0
margin_right = 1130.0
margin_bottom = 417.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 15.0
margin_right = 63.0
margin_bottom = 59.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DetailInfo" to="." method="_on_DetailInfo_pressed"]
[connection signal="pressed" from="FasilitasButton" to="." method="_on_FasilitasButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
